force-app/main/default/objects/Work_Items__c/Work_Items__c.object-meta.xml
<CustomObject>
    <label>Work Item</label>
    <nameField>
        <displayFormat>WI-{00000}</displayFormat>
        <label>Work Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>