force-app/main/default/objects/Work_Items__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Change Request</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordTypeId</field>
            <operation>equals</operation>
            <value>Salesforce Case</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>