force-app/main/default/objects/Work_Items__c/fields/X2000__c.field-meta.xml
<CustomField>
    <fullName>X2000__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>