force-app/main/default/objects/Work_Items__c/listViews/My_Work_Items.listView-meta.xml
<ListView>
    <fullName>My_Work_Items</fullName>
    <columns>Case__c</columns>
    <columns>X2000__c</columns>
    <columns>Subject__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>My Work Items</label>
</ListView>